manifests/base/server/argocd-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: server
  name: argocd-metrics
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8082
    targetPort: 8082
  selector:
    app.kubernetes.io/name: argocd-server
