manifests/base/server/argocd-server-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argo-cd
  name: argocd-server-metrics
spec:
  ports:
  - name: metrics
    protocol: TCP
    port: 8083
    targetPort: 8083
  selector:
    app.kubernetes.io/component: server
